Fix header z-index

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -6,7 +6,7 @@
   right: 0;
   left: 0;
   background-color: $dark-gray-color;
-  z-index: 3;
+  z-index: 5;
   justify-content: space-between;
   flex-wrap: wrap;
   transition: height 250ms ease-out;
